# exercism-haskell

./: .gitignore
accumulate/: accumulate.cabal
anagram/: anagram.cabal  brittany.yaml  package.yaml
anagram/.exercism/: metadata.json
anagram/src/: Anagram.hs
bob/src/: Bob.hs
bracket-push/: bracket-push.cabal  package.yaml
bracket-push/.exercism/: metadata.json
bracket-push/src/: Brackets.hs
collatz-conjecture/: collatz-conjecture.cabal  package.yaml
collatz-conjecture/.exercism/: metadata.json
collatz-conjecture/src/: CollatzConjecture.hs
diamond/: diamond.cabal  package.yaml
diamond/.exercism/: metadata.json
diamond/src/: Diamond.hs
difference-of-squares/src/: Squares.hs
etl/src/: ETL.hs
exercism/grade-school/: grade-school.cabal
exercism/nucleotide-count/src/: DNA.hs
exercism/phone-number/src/: Phone.hs
exercism/raindrops/src/: Raindrops.hs
exercism/sum-of-multiples/src/: SumOfMultiples.hs
grade-school/src/: School.hs
grains/src/: Grains.hs
hackerrank/: 4_17.py  brittany.yaml  hackerrank.cabal  hie.yaml  stack.yaml
hackerrank/src/: AngryProfessor.hs  AppendAndDelete.hs  ArrayManipulation.hs  BeautifulDays.hs  BinaryStrings.hs  ChocolateFeast.hs  Combinations.hs  Cont.hs  CountingValleys.hs  Day2.hs  Day3.hs  DayOfProgrammer.hs  DesignPDFViewer.hs  DirectionsReduction.hs  DrawTree.hs  DynamicArray.hs  ElectronicsShop.hs  ExplosiveSum.hs  Fibonacci.hs  FrequencyQueries.hs  GenerateParentheses.hs  HList.hs  HalloweenSale.hs  HastagGenerator.hs  HowManyNumbersIII.hs  JessieCookies.hs  LicenseKeys.hs  MagicSquareForming.hs  MakingAnagrams.hs  MaximumElement.hs  MigratoryBirds.hs  NumberOfAtoms.hs  Parse.hs  Permutations.hs  Printf.hs  RecursiveDigitSum.hs  RecursiveStaircase.hs  SaveThePrisoner.hs  ServiceLane.hs  SimpleLisp.hs  (+12 more)
leap/src/: LeapYear.hs
linked-list/: linked-list.cabal  package.yaml
linked-list/.exercism/: metadata.json
linked-list/src/: Deque.hs
linked-list/test/: Tests.hs
minesweeper/src/: Minesweeper.hs
minesweeper/test/: Tests.hs
pangram/: package.yaml  pangram.cabal
pangram/.exercism/: metadata.json
pangram/src/: Pangram.hs
phone-number/: brittany.yaml  package.yaml  phone-number.cabal
phone-number/.exercism/: metadata.json
phone-number/src/: Phone.hs
rna-transcription/src/: DNA.hs
run-length-encoding/src/: RunLength.hs
simple-linked-list/: package.yaml  simple-linked-list.cabal
simple-linked-list/.exercism/: metadata.json
simple-linked-list/src/: LinkedList.hs
space-age/src/: SpaceAge.hs
strain/: strain.cabal
