name:                hackerrank
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/hackerrank#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           2018 Evan Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hackerrank
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MigratoryBirds
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                     , async
                     , vector
                     , containers
                     , text
                     , mtl                     
                     , transformers
                     , random
                     , unagi-chan
                     , stm
                     , parallel
  ghc-options:         -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions:          DeriveFoldable
                             , DeriveFunctor
                             , DeriveGeneric
                             , DeriveTraversable
                             , DeriveLift
                             , DerivingStrategies
                             , GeneralizedNewtypeDeriving
                             , OverloadedStrings
                             , ExistentialQuantification
                             , StandaloneDeriving
                             , ScopedTypeVariables
                             , UnicodeSyntax
                             , BinaryLiterals
                             , NumDecimals
                             , ConstraintKinds
                             , RankNTypes
                             , TypeFamilies
                             , TypeInType
                             , DataKinds
                             , KindSignatures
                             , TypeOperators
                             , TypeApplications
                             , GADTs
                             , NamedFieldPuns
                             , InstanceSigs
                             , MultiParamTypeClasses
                             , FunctionalDependencies
                             , ConstrainedClassMethods
                             , InstanceSigs
                             , FlexibleInstances
                             , FlexibleContexts
                             , BangPatterns
                             , ViewPatterns
                             , PatternGuards
                             , MultiWayIf
                             , EmptyCase
                             , LambdaCase
