name:                hackerrank
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/hackerrank#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           2018 Evan Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hackerrank
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AngryProfessor
                    , AppendAndDelete
                    , ArrayManipulation
                    , BeautifulDays
                    , BinaryStrings
                    , ChocolateFeast
                    , Combinations
                    , Cont
                    , CountingValleys
                    , Day2
                    , Day3
                    , DayOfProgrammer
                    , DesignPDFViewer
                    , DirectionsReduction
                    , DrawTree
                    , DynamicArray
                    , ElectronicsShop
                    , ExplosiveSum
                    , Fibonacci
                    , FrequencyQueries
                    , GenerateParentheses
                    , HalloweenSale
                    , HashtagGenerator
                    , HowManyNumbersIII
                    , JessieCookies
                    , LicenseKeys
                    , MagicSquareForming
                    , MakingAnagrams
                    , MaximumElement
                    , MigratoryBirds
                    , NumberOfAtoms
                    , Parse
                    , Permutations
                    , Printf
                    , RecursiveDigitSum
                    , RecursiveStaircase
                    , SaveThePrisoner
                    , ServiceLane
                    , SimpleLisp
                    , SparseArrays
                    , Spiral
                    , StringsMix
                    , SubarraysKDiff
                    , SumByFactors
                    , TenPinBowling
                    , ThinkingWithTypes
                    , Ticker
                    , UtopianTree
                    , ValidParenthesis
                    , ViralAdvertising
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                     , async
                     , vector
                     , containers
                     , text
                     , mtl                     
                     , transformers
                     , random
                     , stm
                     , parallel
                     , aeson
                     , array
                     , split
                     , xturtle
                     , matrix
                     , heaps
                     , monad-par
                     , parsec
  ghc-options:         -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -frefinement-level-hole-fits=1 -haddock
  default-extensions:          DeriveFoldable
                             , DeriveFunctor
                             , DeriveGeneric
                             , DeriveTraversable
                             , DeriveLift
                             , DeriveAnyClass
                             , DerivingStrategies
                             , DerivingVia
                             , GeneralizedNewtypeDeriving
                             , OverloadedStrings
                             , OverloadedLabels
                             , ExistentialQuantification
                             , StandaloneDeriving
                             , ScopedTypeVariables
                             , UnicodeSyntax
                             , BinaryLiterals
                             , NumDecimals
                             , ConstraintKinds
                             , RankNTypes
                             , TypeFamilies
                             , TypeInType
                             , PolyKinds
                             , DataKinds
                             , KindSignatures
                             , TypeOperators
                             , TypeApplications
                             , GADTs
                             , NamedFieldPuns
                             , InstanceSigs
                             , PartialTypeSignatures
                             , TypeSynonymInstances
                             , MultiParamTypeClasses
                             , FunctionalDependencies
                             , ConstrainedClassMethods
                             , InstanceSigs
                             , FlexibleInstances
                             , FlexibleContexts
                             , BangPatterns
                             , ViewPatterns
                             , PatternGuards
                             , MultiWayIf
                             , EmptyCase
                             , LambdaCase
                             , TupleSections